--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 Temp/
 Obj/
 UnityGenerated/
-Library/
+Library/* 
+!Library/*.asset
 Assets/AssetStoreTools*
 
 # ===================================== #
